--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -54,3 +54,10 @@
     margin-top: 30px;
     text-shadow: 2px 2px black solid;
 }
+
+.card-box > img {
+    display: block;
+    width: 250px;
+    border-radius: 15px;
+
+}
