--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -43,6 +43,16 @@ input[type=password] {
     margin: 0 0.5em 1em 0;
 }
 
+input[type=file] {
+    font-size: 1em;
+    /* line-height: 1; */
+    padding: 0.3em 0.4em;
+    margin: 0 0.5em 1em 0;
+    /* margin-top: 20px; */
+    color: #949496;
+
+}
+
 .loginbtn,
 .registerbtn,
 .addbtn {
