--- a/src/main.css
+++ b/src/main.css
@@ -309,7 +309,7 @@ fieldset {
     border-radius: 8px;
     border-color: #2d333b;
     background: #1b1f24;
-    box-shadow: 0 4px 4px #131518;
+    box-shadow: 0 4px 4px black;
 }
 
 fieldset legend {
@@ -394,4 +394,8 @@ input[type=password] {
     color: white;
     text-align: center;
     margin-top: 50px;
+}
+
+.error {
+    color: darkred;
 }
