--- a/src/main.css
+++ b/src/main.css
@@ -28,12 +28,7 @@ nav ul {
 
 nav ul li {
     display: inline;
-    /* margin: 0 2px; */
 }
-
-/* nav a {
-    border-radius: 50%;
-} */
 
 nav a:hover {
     cursor: pointer;
@@ -95,20 +90,6 @@ footer {
     font-size: 20px;
     padding: 8px;
     text-decoration: none;
-    /* border: none; */
-    /* border-radius: 10px; */
-    /* display: inline; */
-    /* align-items: center; */
-    /* justify-content: center; */
-    /* background-color: #1b2845; */
-    /* background-image: linear-gradient(315deg, #45a29e 0%, #0d324d 74%); */
-    /* background-size: 200% 100%; */
-    /* background-position: left; */
-    /* background-repeat: no-repeat; */
-    /* transition: 500ms; */
-
-    /* margin-bottom: 10px; */
-    /* margin-top: 20px; */
 }
 
 .carbtn>a:hover {
@@ -138,6 +119,8 @@ footer {
 .card-box>img {
     display: block;
     width: 250px;
+    height: 150px;
+    object-fit: cover;
     border-radius: 15px;
 }
 
@@ -150,18 +133,18 @@ footer {
     border-radius: 7px 7px 7px 7px;
     box-shadow: 0px 0px 1.5px 3px gray;
     margin-bottom: 200px;
+    display: flex;
 }
 
 .carImg {
-    float: left;
-    height: 100%;
-    width: auto;
-    margin-right: 20px;
+    margin-right: 15px;
 }
 
 .carImg img {
     border-radius: 7px 0 0 7px;
-    height: 100%;
+    height: 400px;
+    width: 650px;
+    object-fit: cover;
 }
 
 .carText {
@@ -194,25 +177,9 @@ footer {
     display: flex;
     text-align: center;
     justify-content: center;
-    /* left: auto; */
-    /* top: auto; */
-    /* right: 0; */
-    /* bottom: 0; */
 }
 
 .detailsBtn>a {
-    /* width: 120px;
-    height: 40px;
-    cursor: pointer;
-    border: 1px solid grey;
-    border-radius: 10px;
-    background: rgb(13, 50, 77);
-    background: linear-gradient(90deg, rgba(13, 50, 77, 1) 34%, rgba(26, 76, 96, 1) 100%);
-    color: white;
-    font-family: "Lato";
-    font-size: 20px;
-    padding: 8px;
-    text-decoration: none; */
     width: 120px;
     height: 30px;
     cursor: pointer;
@@ -220,22 +187,9 @@ footer {
     border-radius: 10px;
     background: rgb(13, 50, 77);
     background: linear-gradient(90deg, rgba(13, 50, 77, 1) 34%, rgba(26, 76, 96, 1) 100%);
-
-    /* border: none; */
-    /* border-radius: 10px; */
-    /* display: inline; */
-    /* align-items: center; */
-    /* justify-content: center; */
-    /* background-color: #1b2845; */
-    /* background-image: linear-gradient(315deg, #45a29e 0%, #0d324d 74%); */
-    /* background-size: 200% 100%; */
-    /* background-position: left; */
-    /* background-repeat: no-repeat; */
-    /* transition: 500ms; */
     color: white;
-    /* font-family: "Lato"; */
     font-size: 20px;
-    /* margin-bottom: 10px; */
+    font-weight: 600;
     margin-top: 10px;
     padding: 6px;
     text-decoration: none;
@@ -243,7 +197,6 @@ footer {
 }
 
 .detailsBtn>a:hover {
-    /* background-position: right; */
     background: #25626f;
 }
 
@@ -295,7 +248,6 @@ label {
 }
 
 .deletebtn:hover {
-    /* background-position: right; */
     background: #25626f;
 }
 
@@ -322,7 +274,6 @@ fieldset legend {
     border: 2px solid #2d333b;
     border-radius: 4px;
     background: #171a1e;
-    /* display: block; */
     width: 100%;
     margin: 0 auto;
 }
@@ -335,7 +286,6 @@ input {
     display: block;
     width: 100%;
     color: white;
-    /* transition: all 2s ease; */
 }
 
 input[type=email],
@@ -347,13 +297,6 @@ input[type=password] {
     margin: 0 0.5em 1em 0;
 }
 
-/* input[type=file] {
-    font-size: 1em;
-    padding: 0.3em 0.4em;
-    margin: 0 0.5em 1em 0;
-    color: #949496;
-} */
-
 .loginbtn,
 .registerbtn,
 .addbtn {
@@ -362,19 +305,9 @@ input[type=password] {
     cursor: pointer;
     border: 1px solid grey;
     border-radius: 10px;
-    /* display: inline; */
-    /* align-items: center; */
-    /* justify-content: center; */
-    /* background-color: #1b2845; */
     background: rgb(13, 50, 77);
     background: linear-gradient(90deg, rgba(13, 50, 77, 1) 34%, rgba(26, 76, 96, 1) 100%);
-    /* background-image: linear-gradient(315deg, #45a29e 0%, #0d324d 74%); */
-    /* background-size: 200% 100%; */
-    /* background-position: left; */
-    /* background-repeat: no-repeat; */
-    /* transition: 500ms; */
     color: white;
-    /* font-family: "Lato"; */
     font-size: 20px;
     margin-bottom: 5px;
     margin-top: 20px;
